--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,14 +34,15 @@
     <string name="personal_message_text">Personal message</string>
     <string name="location_frequency_text">Location frequency</string>
     <string name="time_before_warn_text">Time before warn</string>
-    <string name="check_contact_list">Check you contact list</string>
+    <string name="check_contact_list">Contacts\nwill be notified</string>
     <string name="starting_point_description">Icon starting point</string>
     <string name="settings_description">Icon settings</string>
-    <string name="start_text">Start!</string>
+    <string name="start_text">Start\nConfiguration</string>
+    <string name="start_welcome_text">Start!</string>
     <string name="remove_text">X</string>
     <string name="add_text">+</string>
     <string name="add_contact_text">Add contact</string>
-    <string name="add_contacts_list_text">Add contacts to the list</string>
+    <string name="add_contacts_list_text">Add contacts \nto the list</string>
     <string name="save_text">Save</string>
     <string name="type_number_text">Type number here</string>
     <string name="type_name_text">Type name here</string>
@@ -50,12 +51,17 @@
     <string name="cancel_text">Cancel</string>
     <string name="type_personal_message_text">Type here your personal message</string>
     <string name="current_position_text">Current \n position</string>
-    <string name="latitude_text">Latitude:</string>
-    <string name="longitude_text">Longitude:</string>
+    <string name="latitude_text">Latitude: </string>
+    <string name="longitude_text">Longitude: </string>
     <string name="name_current_position_text">Type name current position</string>
     <string name="save_current_position_text">Save current position</string>
     <string name="contact_info_text">Contact details: \n always.safe.gps@gmail.com \n @always_safe_gps</string>
     <string name="market_text">If you are satisfied with the app \n please give us a good review \n in the play store</string>
     <string name="developer_text">AlwaysSafeGPS was developed \n by Moises Diaz</string>
     <string name="add_contact_manually">Add contact manually</string>
+    <string name="welcome_text">Welcome to\nAlsa GPS</string>
+    <string name="explain_arrows_text">Please before using\nthe app follow the\narrows to configure it</string>
+    <string name="contact_removed">Contact removed</string>
+    <string name="contact_added">Contact added</string>
+    <string name="message_saved">Mesage saved</string>
 </resources>
